apps/homeassistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    istio-injection: enabled
